--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
     "react-scripts": "4.0.3",
+    "subscribe-event": "^1.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
